python-compiler/tests/snapshots/lib__edge_cases__deeply_nested_if.snap
---
source: tests/edge_cases.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@int_format_string = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1
@string_format_string = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@int_format_string.1 = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string.2 = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1
@string_format_string.3 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@int_format_string.4 = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string.5 = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1
@string_format_string.6 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@int_format_string.7 = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string.8 = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1
@string_format_string.9 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@int_format_string.10 = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string.11 = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1
@string_format_string.12 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1

define i32 @main() {
entry:
  %x = alloca i64, align 8
  store i64 9221120237041090565, ptr %x, align 4
  %x1 = load i64, ptr %x, align 4
  %check_qnan = and i64 %x1, 9221120237041090560
  %is_float = icmp ne i64 %check_qnan, 9221120237041090560
  %i64_to_f64 = bitcast i64 %x1 to double
  %extract_payload = and i64 %x1, 281474976710655
  %sign_bit = lshr i64 %extract_payload, 47
  %is_negative = icmp eq i64 %sign_bit, 1
  %sign_extend = or i64 %extract_payload, -281474976710656
  %signed_payload = select i1 %is_negative, i64 %sign_extend, i64 %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %final_payload = select i1 %is_float, double %i64_to_f64, double %payload_to_f64
  %cmptmp = fcmp ogt double %final_payload, 0.000000e+00
  %bool_payload = zext i1 %cmptmp to i64
  %pyobject_bool = or i64 9221401712017801216, %bool_payload
  %check_qnan2 = and i64 %pyobject_bool, 9221120237041090560
  %is_float3 = icmp ne i64 %check_qnan2, 9221120237041090560
  %i64_to_f644 = bitcast i64 %pyobject_bool to double
  %extract_payload5 = and i64 %pyobject_bool, 281474976710655
  %sign_bit6 = lshr i64 %extract_payload5, 47
  %is_negative7 = icmp eq i64 %sign_bit6, 1
  %sign_extend8 = or i64 %extract_payload5, -281474976710656
  %signed_payload9 = select i1 %is_negative7, i64 %sign_extend8, i64 %extract_payload5
  %payload_to_f6410 = sitofp i64 %signed_payload9 to double
  %final_payload11 = select i1 %is_float3, double %i64_to_f644, double %payload_to_f6410
  %to_bool = fcmp one double %final_payload11, 0.000000e+00
  br i1 %to_bool, label %then, label %else

then:                                             ; preds = %entry
  %x12 = load i64, ptr %x, align 4
  %check_qnan13 = and i64 %x12, 9221120237041090560
  %is_float14 = icmp ne i64 %check_qnan13, 9221120237041090560
  %i64_to_f6415 = bitcast i64 %x12 to double
  %extract_payload16 = and i64 %x12, 281474976710655
  %sign_bit17 = lshr i64 %extract_payload16, 47
  %is_negative18 = icmp eq i64 %sign_bit17, 1
  %sign_extend19 = or i64 %extract_payload16, -281474976710656
  %signed_payload20 = select i1 %is_negative18, i64 %sign_extend19, i64 %extract_payload16
  %payload_to_f6421 = sitofp i64 %signed_payload20 to double
  %final_payload22 = select i1 %is_float14, double %i64_to_f6415, double %payload_to_f6421
  %cmptmp23 = fcmp ogt double %final_payload22, 2.000000e+00
  %bool_payload24 = zext i1 %cmptmp23 to i64
  %pyobject_bool25 = or i64 9221401712017801216, %bool_payload24
  %check_qnan26 = and i64 %pyobject_bool25, 9221120237041090560
  %is_float27 = icmp ne i64 %check_qnan26, 9221120237041090560
  %i64_to_f6428 = bitcast i64 %pyobject_bool25 to double
  %extract_payload29 = and i64 %pyobject_bool25, 281474976710655
  %sign_bit30 = lshr i64 %extract_payload29, 47
  %is_negative31 = icmp eq i64 %sign_bit30, 1
  %sign_extend32 = or i64 %extract_payload29, -281474976710656
  %signed_payload33 = select i1 %is_negative31, i64 %sign_extend32, i64 %extract_payload29
  %payload_to_f6434 = sitofp i64 %signed_payload33 to double
  %final_payload35 = select i1 %is_float27, double %i64_to_f6428, double %payload_to_f6434
  %to_bool36 = fcmp one double %final_payload35, 0.000000e+00
  br i1 %to_bool36, label %then37, label %else38

else:                                             ; preds = %entry
  br i1 false, label %print_string123, label %check_int120

ifcont:                                           ; preds = %print_end124, %ifcont39
  ret i32 0

then37:                                           ; preds = %then
  %x40 = load i64, ptr %x, align 4
  %check_qnan41 = and i64 %x40, 9221120237041090560
  %is_float42 = icmp ne i64 %check_qnan41, 9221120237041090560
  %i64_to_f6443 = bitcast i64 %x40 to double
  %extract_payload44 = and i64 %x40, 281474976710655
  %sign_bit45 = lshr i64 %extract_payload44, 47
  %is_negative46 = icmp eq i64 %sign_bit45, 1
  %sign_extend47 = or i64 %extract_payload44, -281474976710656
  %signed_payload48 = select i1 %is_negative46, i64 %sign_extend47, i64 %extract_payload44
  %payload_to_f6449 = sitofp i64 %signed_payload48 to double
  %final_payload50 = select i1 %is_float42, double %i64_to_f6443, double %payload_to_f6449
  %cmptmp51 = fcmp ogt double %final_payload50, 4.000000e+00
  %bool_payload52 = zext i1 %cmptmp51 to i64
  %pyobject_bool53 = or i64 9221401712017801216, %bool_payload52
  %check_qnan54 = and i64 %pyobject_bool53, 9221120237041090560
  %is_float55 = icmp ne i64 %check_qnan54, 9221120237041090560
  %i64_to_f6456 = bitcast i64 %pyobject_bool53 to double
  %extract_payload57 = and i64 %pyobject_bool53, 281474976710655
  %sign_bit58 = lshr i64 %extract_payload57, 47
  %is_negative59 = icmp eq i64 %sign_bit58, 1
  %sign_extend60 = or i64 %extract_payload57, -281474976710656
  %signed_payload61 = select i1 %is_negative59, i64 %sign_extend60, i64 %extract_payload57
  %payload_to_f6462 = sitofp i64 %signed_payload61 to double
  %final_payload63 = select i1 %is_float55, double %i64_to_f6456, double %payload_to_f6462
  %to_bool64 = fcmp one double %final_payload63, 0.000000e+00
  br i1 %to_bool64, label %then65, label %else66

else38:                                           ; preds = %then
  br i1 false, label %print_string115, label %check_int112

ifcont39:                                         ; preds = %print_end116, %ifcont67
  br label %ifcont

then65:                                           ; preds = %then37
  %x68 = load i64, ptr %x, align 4
  %check_qnan69 = and i64 %x68, 9221120237041090560
  %is_float70 = icmp ne i64 %check_qnan69, 9221120237041090560
  %i64_to_f6471 = bitcast i64 %x68 to double
  %extract_payload72 = and i64 %x68, 281474976710655
  %sign_bit73 = lshr i64 %extract_payload72, 47
  %is_negative74 = icmp eq i64 %sign_bit73, 1
  %sign_extend75 = or i64 %extract_payload72, -281474976710656
  %signed_payload76 = select i1 %is_negative74, i64 %sign_extend75, i64 %extract_payload72
  %payload_to_f6477 = sitofp i64 %signed_payload76 to double
  %final_payload78 = select i1 %is_float70, double %i64_to_f6471, double %payload_to_f6477
  %cmptmp79 = fcmp ogt double %final_payload78, 3.000000e+00
  %bool_payload80 = zext i1 %cmptmp79 to i64
  %pyobject_bool81 = or i64 9221401712017801216, %bool_payload80
  %check_qnan82 = and i64 %pyobject_bool81, 9221120237041090560
  %is_float83 = icmp ne i64 %check_qnan82, 9221120237041090560
  %i64_to_f6484 = bitcast i64 %pyobject_bool81 to double
  %extract_payload85 = and i64 %pyobject_bool81, 281474976710655
  %sign_bit86 = lshr i64 %extract_payload85, 47
  %is_negative87 = icmp eq i64 %sign_bit86, 1
  %sign_extend88 = or i64 %extract_payload85, -281474976710656
  %signed_payload89 = select i1 %is_negative87, i64 %sign_extend88, i64 %extract_payload85
  %payload_to_f6490 = sitofp i64 %signed_payload89 to double
  %final_payload91 = select i1 %is_float83, double %i64_to_f6484, double %payload_to_f6490
  %to_bool92 = fcmp one double %final_payload91, 0.000000e+00
  br i1 %to_bool92, label %then93, label %else94

else66:                                           ; preds = %then37
  br i1 false, label %print_string107, label %check_int104

ifcont67:                                         ; preds = %print_end108, %ifcont95
  br label %ifcont39

then93:                                           ; preds = %then65
  br i1 false, label %print_string, label %check_int

else94:                                           ; preds = %then65
  br i1 false, label %print_string99, label %check_int96

ifcont95:                                         ; preds = %print_end100, %print_end
  br label %ifcont67

check_int:                                        ; preds = %then93
  br i1 true, label %print_int, label %print_float

print_int:                                        ; preds = %check_int
  %printf_int = call i32 (ptr, ...) @printf(ptr @int_format_string, i64 1)
  br label %print_end

print_float:                                      ; preds = %check_int
  %printf_float = call i32 (ptr, ...) @printf(ptr @float_format_string, double 1.000000e+00)
  br label %print_end

print_string:                                     ; preds = %then93
  %printf_string = call i32 (ptr, ...) @printf(ptr @string_format_string, ptr inttoptr (i64 1 to ptr))
  br label %print_end

print_end:                                        ; preds = %print_string, %print_float, %print_int
  br label %ifcont95

check_int96:                                      ; preds = %else94
  br i1 true, label %print_int97, label %print_float98

print_int97:                                      ; preds = %check_int96
  %printf_int101 = call i32 (ptr, ...) @printf(ptr @int_format_string.1, i64 2)
  br label %print_end100

print_float98:                                    ; preds = %check_int96
  %printf_float102 = call i32 (ptr, ...) @printf(ptr @float_format_string.2, double 2.000000e+00)
  br label %print_end100

print_string99:                                   ; preds = %else94
  %printf_string103 = call i32 (ptr, ...) @printf(ptr @string_format_string.3, ptr inttoptr (i64 2 to ptr))
  br label %print_end100

print_end100:                                     ; preds = %print_string99, %print_float98, %print_int97
  br label %ifcont95

check_int104:                                     ; preds = %else66
  br i1 true, label %print_int105, label %print_float106

print_int105:                                     ; preds = %check_int104
  %printf_int109 = call i32 (ptr, ...) @printf(ptr @int_format_string.4, i64 3)
  br label %print_end108

print_float106:                                   ; preds = %check_int104
  %printf_float110 = call i32 (ptr, ...) @printf(ptr @float_format_string.5, double 3.000000e+00)
  br label %print_end108

print_string107:                                  ; preds = %else66
  %printf_string111 = call i32 (ptr, ...) @printf(ptr @string_format_string.6, ptr inttoptr (i64 3 to ptr))
  br label %print_end108

print_end108:                                     ; preds = %print_string107, %print_float106, %print_int105
  br label %ifcont67

check_int112:                                     ; preds = %else38
  br i1 true, label %print_int113, label %print_float114

print_int113:                                     ; preds = %check_int112
  %printf_int117 = call i32 (ptr, ...) @printf(ptr @int_format_string.7, i64 4)
  br label %print_end116

print_float114:                                   ; preds = %check_int112
  %printf_float118 = call i32 (ptr, ...) @printf(ptr @float_format_string.8, double 4.000000e+00)
  br label %print_end116

print_string115:                                  ; preds = %else38
  %printf_string119 = call i32 (ptr, ...) @printf(ptr @string_format_string.9, ptr inttoptr (i64 4 to ptr))
  br label %print_end116

print_end116:                                     ; preds = %print_string115, %print_float114, %print_int113
  br label %ifcont39

check_int120:                                     ; preds = %else
  br i1 true, label %print_int121, label %print_float122

print_int121:                                     ; preds = %check_int120
  %printf_int125 = call i32 (ptr, ...) @printf(ptr @int_format_string.10, i64 5)
  br label %print_end124

print_float122:                                   ; preds = %check_int120
  %printf_float126 = call i32 (ptr, ...) @printf(ptr @float_format_string.11, double 5.000000e+00)
  br label %print_end124

print_string123:                                  ; preds = %else
  %printf_string127 = call i32 (ptr, ...) @printf(ptr @string_format_string.12, ptr inttoptr (i64 5 to ptr))
  br label %print_end124

print_end124:                                     ; preds = %print_string123, %print_float122, %print_int121
  br label %ifcont
}

declare i32 @printf(ptr, ...)
