python-compiler/tests/snapshots/lib__edge_cases__infinite_loop_structure.snap
---
source: tests/edge_cases.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@int_format_string = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1
@string_format_string = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1

define i32 @main() {
entry:
  %x = alloca i64, align 8
  store i64 9221120237041090561, ptr %x, align 4
  br label %loop_cond

loop_cond:                                        ; preds = %add_merge, %entry
  %x1 = load i64, ptr %x, align 4
  %check_qnan = and i64 %x1, 9221120237041090560
  %is_float = icmp ne i64 %check_qnan, 9221120237041090560
  %i64_to_f64 = bitcast i64 %x1 to double
  %extract_payload = and i64 %x1, 281474976710655
  %sign_bit = lshr i64 %extract_payload, 47
  %is_negative = icmp eq i64 %sign_bit, 1
  %sign_extend = or i64 %extract_payload, -281474976710656
  %signed_payload = select i1 %is_negative, i64 %sign_extend, i64 %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %final_payload = select i1 %is_float, double %i64_to_f64, double %payload_to_f64
  %cmptmp = fcmp ogt double %final_payload, 0.000000e+00
  %bool_payload = zext i1 %cmptmp to i64
  %pyobject_bool = or i64 9221401712017801216, %bool_payload
  %check_qnan2 = and i64 %pyobject_bool, 9221120237041090560
  %is_float3 = icmp ne i64 %check_qnan2, 9221120237041090560
  %i64_to_f644 = bitcast i64 %pyobject_bool to double
  %extract_payload5 = and i64 %pyobject_bool, 281474976710655
  %sign_bit6 = lshr i64 %extract_payload5, 47
  %is_negative7 = icmp eq i64 %sign_bit6, 1
  %sign_extend8 = or i64 %extract_payload5, -281474976710656
  %signed_payload9 = select i1 %is_negative7, i64 %sign_extend8, i64 %extract_payload5
  %payload_to_f6410 = sitofp i64 %signed_payload9 to double
  %final_payload11 = select i1 %is_float3, double %i64_to_f644, double %payload_to_f6410
  %to_bool = fcmp one double %final_payload11, 0.000000e+00
  br i1 %to_bool, label %loop_body, label %loop_exit

loop_body:                                        ; preds = %loop_cond
  %x12 = load i64, ptr %x, align 4
  %check_qnan13 = and i64 %x12, 9221120237041090560
  %is_float14 = icmp ne i64 %check_qnan13, 9221120237041090560
  %tag_bits = and i64 %x12, 1970324836974592
  %tag = lshr i64 %tag_bits, 48
  %is_bool = icmp eq i64 %tag, 1
  %is_string = icmp eq i64 %tag, 2
  %is_list = icmp eq i64 %tag, 3
  %map_bool = select i1 %is_bool, i64 2, i64 %tag
  %map_string = select i1 %is_string, i64 3, i64 %map_bool
  %map_list = select i1 %is_list, i64 4, i64 %map_string
  %final_tag = select i1 %is_float14, i64 1, i64 %map_list
  %lhs_is_string = icmp eq i64 %final_tag, 3
  %both_strings = and i1 %lhs_is_string, false
  br i1 %both_strings, label %str_concat, label %arithmetic

loop_exit:                                        ; preds = %loop_cond
  %x28 = load i64, ptr %x, align 4
  %check_qnan29 = and i64 %x28, 9221120237041090560
  %is_float30 = icmp ne i64 %check_qnan29, 9221120237041090560
  %tag_bits31 = and i64 %x28, 1970324836974592
  %tag32 = lshr i64 %tag_bits31, 48
  %is_bool33 = icmp eq i64 %tag32, 1
  %is_string34 = icmp eq i64 %tag32, 2
  %is_list35 = icmp eq i64 %tag32, 3
  %map_bool36 = select i1 %is_bool33, i64 2, i64 %tag32
  %map_string37 = select i1 %is_string34, i64 3, i64 %map_bool36
  %map_list38 = select i1 %is_list35, i64 4, i64 %map_string37
  %final_tag39 = select i1 %is_float30, i64 1, i64 %map_list38
  %check_qnan40 = and i64 %x28, 9221120237041090560
  %is_float41 = icmp ne i64 %check_qnan40, 9221120237041090560
  %i64_to_f6442 = bitcast i64 %x28 to double
  %extract_payload43 = and i64 %x28, 281474976710655
  %sign_bit44 = lshr i64 %extract_payload43, 47
  %is_negative45 = icmp eq i64 %sign_bit44, 1
  %sign_extend46 = or i64 %extract_payload43, -281474976710656
  %signed_payload47 = select i1 %is_negative45, i64 %sign_extend46, i64 %extract_payload43
  %payload_to_f6448 = sitofp i64 %signed_payload47 to double
  %final_payload49 = select i1 %is_float41, double %i64_to_f6442, double %payload_to_f6448
  %is_int = icmp eq i64 %final_tag39, 0
  %is_string50 = icmp eq i64 %final_tag39, 3
  br i1 %is_string50, label %print_string, label %check_int

str_concat:                                       ; preds = %loop_body
  %extract_ptr_payload = and i64 %x12, 281474976710655
  %payload_to_ptr = inttoptr i64 %extract_ptr_payload to ptr
  %lhs_len = call i64 @strlen(ptr %payload_to_ptr)
  %rhs_len = call i64 @strlen(ptr inttoptr (i64 1 to ptr))
  %total_len = add i64 %lhs_len, %rhs_len
  %total_size = add i64 %total_len, 1
  %malloc_concat = call ptr @malloc(i64 %total_size)
  %memcpy_lhs = call ptr @memcpy(ptr %malloc_concat, ptr %payload_to_ptr, i64 %lhs_len)
  %rhs_dest = getelementptr i8, ptr %malloc_concat, i64 %lhs_len
  %rhs_copy_len = add i64 %rhs_len, 1
  %memcpy_rhs = call ptr @memcpy(ptr %rhs_dest, ptr inttoptr (i64 1 to ptr), i64 %rhs_copy_len)
  %ptr_to_int = ptrtoint ptr %malloc_concat to i64
  %ptr_payload = and i64 %ptr_to_int, 281474976710655
  %pyobject_string = or i64 9221683186994511872, %ptr_payload
  br label %add_merge

arithmetic:                                       ; preds = %loop_body
  %check_qnan15 = and i64 %x12, 9221120237041090560
  %is_float16 = icmp ne i64 %check_qnan15, 9221120237041090560
  %i64_to_f6417 = bitcast i64 %x12 to double
  %extract_payload18 = and i64 %x12, 281474976710655
  %sign_bit19 = lshr i64 %extract_payload18, 47
  %is_negative20 = icmp eq i64 %sign_bit19, 1
  %sign_extend21 = or i64 %extract_payload18, -281474976710656
  %signed_payload22 = select i1 %is_negative20, i64 %sign_extend21, i64 %extract_payload18
  %payload_to_f6423 = sitofp i64 %signed_payload22 to double
  %final_payload24 = select i1 %is_float16, double %i64_to_f6417, double %payload_to_f6423
  %lhs_is_float = icmp eq i64 %final_tag, 1
  %result_is_float = or i1 %lhs_is_float, false
  %addtmp = fadd double %final_payload24, 1.000000e+00
  %result_tag = select i1 %result_is_float, i64 1, i64 0
  %is_float_tag = icmp eq i64 %result_tag, 1
  %float_to_i64 = bitcast double %addtmp to i64
  %is_bool25 = icmp eq i64 %result_tag, 2
  %is_string26 = icmp eq i64 %result_tag, 3
  %is_list27 = icmp eq i64 %result_tag, 4
  %tag_temp1 = select i1 %is_bool25, i64 1, i64 0
  %tag_temp2 = select i1 %is_string26, i64 2, i64 %tag_temp1
  %internal_tag = select i1 %is_list27, i64 3, i64 %tag_temp2
  %payload_to_i64 = fptosi double %addtmp to i64
  %payload_masked = and i64 %payload_to_i64, 281474976710655
  %tag_shifted = shl i64 %internal_tag, 48
  %with_qnan = or i64 9221120237041090560, %tag_shifted
  %nanboxed = or i64 %with_qnan, %payload_masked
  %pyobject = select i1 %is_float_tag, i64 %float_to_i64, i64 %nanboxed
  br label %add_merge

add_merge:                                        ; preds = %arithmetic, %str_concat
  %add_result = phi i64 [ %pyobject_string, %str_concat ], [ %pyobject, %arithmetic ]
  store i64 %add_result, ptr %x, align 4
  br label %loop_cond

check_int:                                        ; preds = %loop_exit
  br i1 %is_int, label %print_int, label %print_float

print_int:                                        ; preds = %check_int
  %to_int = fptosi double %final_payload49 to i64
  %printf_int = call i32 (ptr, ...) @printf(ptr @int_format_string, i64 %to_int)
  br label %print_end

print_float:                                      ; preds = %check_int
  %printf_float = call i32 (ptr, ...) @printf(ptr @float_format_string, double %final_payload49)
  br label %print_end

print_string:                                     ; preds = %loop_exit
  %extract_ptr_payload51 = and i64 %x28, 281474976710655
  %payload_to_ptr52 = inttoptr i64 %extract_ptr_payload51 to ptr
  %printf_string = call i32 (ptr, ...) @printf(ptr @string_format_string, ptr %payload_to_ptr52)
  br label %print_end

print_end:                                        ; preds = %print_string, %print_float, %print_int
  ret i32 0
}

declare i64 @strlen(ptr)

declare ptr @malloc(i64)

declare ptr @memcpy(ptr, ptr, i64)

declare i32 @printf(ptr, ...)
